samples/_failures_safe/1761042371_5cd772_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c16de0d5.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_c16de0d5.c:154:27: error: ‘current’ undeclared (first use in this function)
  154 |         parse_term(lexer, current
      |                           ^~~~~~~
./samples/SAFE/__tmp_c16de0d5.c:154:27: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_c16de0d5.c:154:34: error: expected ‘)’ at end of input
  154 |         parse_term(lexer, current
      |                   ~              ^
      |                                  )
./samples/SAFE/__tmp_c16de0d5.c:154:9: error: expected declaration or statement at end of input
  154 |         parse_term(lexer, current
      |         ^~~~~~~~~~
./samples/SAFE/__tmp_c16de0d5.c:154:9: error: expected declaration or statement at end of input
